Ganesh Project/src/objects/PriceBook_Account__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_PriceBook_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PricebookId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PricebookId</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>Account_PriceBook_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>PriceBook(Account)</label>
    <nameField>
        <label>PriceBook(Account)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PriceBooks(Account)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>